# B8204-Repository

./: kuzinainga  kuzinainga 2  mainn.cpp  matrix_lib.cpp  matrix_lib.h  matrix_lib_t.hpp
Tasks/Extra Exam Task/Gasanov Renat/: main.cpp  ppp.cpp  ppp.h
Tasks/SysoevGregoryTask0.4/: ComplexNumber.cpp  Header.h  unittest1.cpp
Tasks/Task 1/Lisitskaya Ekaterina/: Translit.cpp  Translit_lib.h
Tasks/Task0.4/GasanovRenat/: main.cpp
Tasks/Task0.5/SimakovValentin/: shop.cpp
Tasks/Task1/: CMakeLists.txt
Tasks/Task1/GasanovRenatFinalTask1/: TR1.cpp
Tasks/Task1/GorbunovVladislav/: translit.cpp
Tasks/Task1/Kondakov/: ConsoleApplication2.cpp
Tasks/Task1/Krisko Ivan Translit/: Source.cpp  Translit.cpp  Translit.h
Tasks/Task2/GasanovRenatTask2New/: main.cpp  matrix_lib.h  matrix_lib_t.hpp
Tasks/Task2/GorbunovVladislav/: main.cpp  matrix_lib.cpp  matrix_lib.h
Tasks/Task2/Kondakov Ivan/: main.cpp  matrix_lib.cpp  matrix_lib.h
Tasks/Task2/Krisko_Ivan/: Source.cpp  matrix_lib.cpp  matrix_lib.h
Tasks/Task2/LisitskayaKaterina/: main.cpp  matrix_lib.cpp
Tasks/Task4/: Header.h  Logger.h  files.h  logger.cpp  main.cpp  string.cpp  string.h  unittest1.cpp
Tasks/Task4/GasanovRenat/: Logger.h  files.h  logger.cpp  main.cpp
Tasks/Task4/RogonovArtem/: ConsoleApplication3.cpp  ConsoleApplication3.h  Header.h  Resource.h  UnitTest.cpp  stdafx.h
Tasks/Task5/GasanovRenat/: rpn.h  (+2 more)
Tasks/Task5/Kondakov/test/: CMakeLists.txt  compareTests.cpp  fillTest.cpp  prinTest.cpp  runTest.cpp  sorTest.cpp  swapTest.cpp
Tasks/Task7/: 5lab.docx  RingDeque.cpp  RingDeque.h  main.cpp
(+73 files in other folders)
